(lang dune 3.4)

(name gaml)

(generate_opam_files true)

(source
 (github james-elliot/gaml))

(authors "Jean-Marc Alliot")

(maintainers "Jean-Marc Alliot")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name gaml)
 (synopsis "A genetic algorithm in ML")
 (description "A genetic algorithm in ML")
 (depends ocaml dune domainslib)
 (tags
  (ocaml ML "Genetic Algorithm")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
